--- a/css/css.css
+++ b/css/css.css
@@ -3,34 +3,61 @@
 	padding: 0px;
 }
 body{
-	background-color: #ffbbff;
+	background-color: #444;
 }
-.bg2{
-	background-color: #eeffbb;
-	overflow: hidden;
+.navcont{
+	background-color: #fff;
+	width: 100%;
 }
-.box0{
-	margin:15px;
-	padding:15px;
-	border: 1px solid blue;
-	overflow:hidden;	
+.nav{
+	width: 60%;
+	height: 56px;
+	margin: 0 auto;
+	background-color: #f1f1f1;
+	font-family: helvetica;
+	font-size: 14px;
 }
-.box1{
-	width:500px;
-	height:200px;
-	float:left;
-	background-color: #a1b2c3;
+ul{
+	list-style-type: none;
+	width: 100%;
 }
-.box2{
-	width:350px;
-	height:200px;
-	float:left;
-	background-color: #aabbcc;
+.nav ul li{
+	float: left;
+	width: 24%;
+	position: relative;
+	border-right: 1px solid #e9e9e9;
 }
-@font-face{
-	font-family: my-font;
-	src:url('');
+.nav ul li a{
+	display: block;
+	width: 100%;
+	text-align: center;
+	text-decoration: none;
+	line-height: 56px;
 }
-div{
-	font-family:my-font;
+.nav ul li ul{
+	display: none;
+}
+.nav ul li:hover ul{
+	display: block;
+	width: 100%;
+	position: absolute;
+	top: 56px;
+	left: 0;
+}
+.nav ul li ul li{
+	width: 100%;
+}
+.nav ul li ul li a{
+	display: block;
+	width: 100%;
+	background:#12aeef;
+	color: #ffffff;
+	border-bottom: 1px solid #ffffff;
+}
+.nav ul li:hover ul li a:hover{
+	background-color: #6dc7ec;
+	color: #ffffff;
+}
+.mod li{
+	list-style: circle;
 }
