--- a/css/style.css
+++ b/css/style.css
@@ -17,28 +17,34 @@ body{
 	background-color: snow;
 	margin: 0px auto;
 }
+.heading_nav{
+	width: 100%;
+	height: 30px;
+	padding-bottom: 30px;
+	padding-top: 30px;
+	position: relative;
+}
 .heading_title{
 	float: left;
 	font-family: Arial,Helvetica,sans-serif;
-	font-size: 30px;
+	font-size: 25px;
+	line-height: 30px;
 	color:burlywood;
 }
-.heading_nav{
-	padding-bottom: 30px;
-	padding-top: 30px;
-	width: 100%;
-	height: 30px;
-	position: relative;
-}
 .heading_navbar{
-	border: 1px solid red;
+	/*background-color: #adef22;*/
+	height:30px;
+	overflow: hidden;
 }
 ul{
 	margin-left: 40px;
 	float: left;
 	list-style-type: none;
-	padding-top: 6px;
-	padding-bottom: 6px;
+	line-height: 30px;
+}
+li{
+	padding-left: 10px;
+	display: inline;
 }
 a:link,a:visited{
 	font-weight: bold;
@@ -49,4 +55,44 @@ a:link,a:visited{
 }
 a:hover,a:active{
 	color: dimgray
+}
+.heading_img img{
+	border-radius: 30px;
+	display: inline;
+	width: 26px;
+	height: 26px;
+	box-shadow: 0 1px 1px rgba(0,0,0,0.2);
+	float: right;
+}
+.heading_soptlight form{
+	float: right;
+	width: 100px;
+	height: 26px;
+	position: relative;
+	margin-right: 100px;
+}
+form input{
+	height:26px;
+	border-radius: 30px;
+}
+.body{
+	padding: 30px;
+	height: auto;
+	width: auto;
+}
+.body_title h3{
+	font-size: 30px;
+	font-family: Arial,Helvetica, sans-serit;
+	color: #333333;
+
+}
+.body_title p{
+	margin-top:20px;
+	margin-bottom: 20px;
+}
+.footing{
+	padding-top: 20px;
+	text-align: center;
+	font-size: 10px;
+	color: darkgray;
 }
